:art: Improve structure

--- a/_posts/OSTEP/2024-01-01-index.md
+++ b/_posts/OSTEP/2024-01-01-index.md
@@ -15,3 +15,9 @@ The book is divided into three parts:
 3. Persistence
 
 The book is available for free online at [http://pages.cs.wisc.edu/~remzi/OSTEP/](http://pages.cs.wisc.edu/~remzi/OSTEP/).
+
+## Virtualization
+
+## Concurrency
+
+## Persistence
