--- a/_posts/OSTEP/2024-01-01-index.md
+++ b/_posts/OSTEP/2024-01-01-index.md
@@ -18,6 +18,10 @@ The book is available for free online at [http://pages.cs.wisc.edu/~remzi/OSTEP/
 
 ## Virtualization
 
+- [1 - Processes](./OSTEP/Virtualization/Processes)
+- [2 - Process API](./OSTEP/Virtualization/ProcessAPI)
+- [3 - Mechanism: Address Translation](./OSTEP/Virtualization/Mechanism-Address-Translation)
+
 ## Concurrency
 
 ## Persistence
